--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@ Stay grounded. Sip often. Be here. Bean There.</p>
 
   <form action="https://formsubmit.co/reguyaljenzdelosreyes@gmail.com" method="POST" style="max-width: 600px; margin: 30px auto; display: flex; flex-direction: column; gap: 20px; padding: 30px; background-color: #fefefe; border: 3px solid #6f4e37; border-radius: 12px; box-shadow: 0 6px 12px rgba(0, 0, 0, 0.15);">
   <input type="hidden" name="_captcha" value="false">
-  <input type="hidden" name="_next" value="https://Reguyal-DCET.github.io/coffee-web-application/">
+  <input type="hidden" name="_next" value="https://Reguyal-dcet.github.io/coffee-web-application/">
 
 
   <input type="text" name="name" placeholder="Your Name (optional)" style="padding: 15px; border: 2px solid #ccc; border-radius: 8px; font-size: 1rem; font-family: inherit; width: 100%; box-sizing: border-box;">
